Fixed markup styling on desktop version according to mockup

--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -15,7 +15,7 @@ $red-color: #FF0000
 					object-fit: cover
 
 	.content-player
-		margin: 55px 205px 60px 0
+		margin: 55px 205px 55px 0
 		max-width: 1120px
 		.content-player__image
 			width: 540px
@@ -33,13 +33,17 @@ $red-color: #FF0000
 	.content
 		width: calc(100% - 315px)
 
+	.main-home
+		.content.content_full
+			margin-top: 20px	
+
 	.content.content_full
 		width: calc(100% - 245px)
 		margin: 0 0 0 65px
 		overflow: hidden	
 
 	.content-main, .content-top, .content-header
-		margin-right: 70px	
+		margin-right: 55px	
 
 @media only screen and (max-width: 1600px)
 	.videoplayer
