--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -6,7 +6,11 @@
 	position: fixed
 	width: 100vw
 	z-index: 999
-	background: #F2F2F2
+	background: #FFFFFF
+
+	.menu
+		img
+			display: block
 
 	.mobile-nav
 		display: none
