--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -15,7 +15,7 @@ body
 	margin: 0
 	padding: 0
 	font-family: 'Mulish', sans-serif
-	background: #F2F2F2
+	background: #FFFFFF
 	position: relative
 
 .section-home
@@ -26,6 +26,9 @@ body
 	width: 100%
 	position: relative
 	padding-top: 94px
+
+.main-home
+	padding-bottom: 50px
 
 .content
 	margin: 0 70px 0 65px
@@ -48,7 +51,7 @@ body
 
 .content-header
 	margin: 30px 0 20px 0
-	width: calc(100% - 70px)
+	width: calc(100% - 55px)
 	display: flex
 	align-items: flex-start
 	justify-content: space-between
@@ -114,6 +117,15 @@ body
 			line-height: 22px
 			color: #C2C2C2
 			margin: 0
+			display: flex
+			align-items: center
+
+		.divider
+			display: flex
+			align-items: center
+			height: 100%
+			align-self: center
+			padding: 0 10px	
 
 .content-navigation
 	display: flex
@@ -143,6 +155,8 @@ body
 			color: $red-color
 			border-bottom: 2px solid $red-color
 			border-radius: 1px
+			padding-bottom: 2px
+			font-weight: 700
 
 	.nav-item.nav-item_more
 		display: none
