--- a/src/sass/modules/_sidebar.sass
+++ b/src/sass/modules/_sidebar.sass
@@ -1,9 +1,11 @@
 .sidebar
 	margin-left: 32px
-	padding:  20px 0 40px 0
+	padding:  20px 0 0 0
 	display: flex
 	flex-direction: column
 	justify-content: space-between
+	line-height: 20px
+	font-size: 16px		
 
 .sidebar-settings
 	display: flex
@@ -13,8 +15,6 @@
 		margin-right: 12px
 
 	.sidebar-settings__text
-		font-size: 16px
-		line-height: 20px
 		color: #C2C2C2
 		margin: 0
 
@@ -40,8 +40,7 @@
 		.subscriptions-item__text
 			color: #898989
 			margin: 0
-			line-height: 20px
-			font-size: 16px		
+
 
 .categories
 	width: 135px
@@ -54,7 +53,7 @@
 		transition: .1s all
 
 		.categories-item__image
-		 	margin-right: 17px
+		 	margin-right: 15px
 
 		.categories-item__text
 			color: #898989
@@ -67,7 +66,7 @@
 			color: $red-color
 			
 	.categories-item.categories-item_spaced
-		margin-bottom: 60px
+		margin-bottom: 58px
 
 .sidebar-mobile
 	display: none
