Added missing icons

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -17,6 +17,7 @@ body
 	font-family: 'Mulish', sans-serif
 	background: #FFFFFF
 	position: relative
+	overflow: auto
 
 .section-home
 	padding-top: 20px
