--- a/src/sass/modules/_videoplayer.sass
+++ b/src/sass/modules/_videoplayer.sass
@@ -48,7 +48,7 @@
 
 				.videoplayer-controls
 					position: relative
-					top: -5px
+					top: -7px
 					width: calc(100% - 15px)
 					margin: 0 auto
 					display: flex
@@ -80,13 +80,13 @@
 		font-size: 36px
 		line-height: 45px
 		color: #192646	
-		margin: 20px 0 4px 0
+		margin: 20px 0 0 0
 
 	.videoplayer-navigation	
 		display: flex
 		justify-content: space-between
 		align-items: flex-end
-		padding-bottom: 15px
+		padding-bottom: 17px
 
 		.videoplayer-navigation__wrapper
 			display: flex
@@ -157,7 +157,7 @@
 					display: none
 
 				.videoplayer-description__summary
-					margin: 14px 0
+					margin: 12px 0 14px 0
 					font-size: 16px
 					line-height: 22px
 					color: #000000
