Fixed styling for gallery-header, main page header, nav links in gallery

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -29,7 +29,10 @@ body
 	padding-top: 94px
 
 .main-home
-	padding-bottom: 50px
+	padding-bottom: 41px
+
+.main-channel
+	padding-bottom: 33px	
 
 .content
 	margin: 0 70px 0 65px
