--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -38,7 +38,7 @@
 		outline: none
 		width: 830px
 		height: 44px
-		background: #EBEBEB	 
+		background: #F9F9F9 
 		border-radius: 22px	
 		padding: 0 35px 0 23px
 
@@ -62,7 +62,8 @@
 .top-navigation
 	display: flex
 	justify-content: space-between
-	width: 175px
+	align-items: flex-end
+	width: 185px
 	margin-right: 45px
 	margin-left: 505px
 
@@ -70,6 +71,8 @@
 		position: relative
 		cursor: pointer	
 		transition: .1s all
+		img
+			display: block
 
 		.top-navigation__alert
 			font-size: 12px
@@ -87,3 +90,5 @@
 
 .top-userpic
 	cursor: pointer
+	img
+		display: block
