--- a/src/sass/modules/_galleries.sass
+++ b/src/sass/modules/_galleries.sass
@@ -113,10 +113,14 @@
 .gallery-header
 	display: flex
 	align-items: flex-end
-	padding-right: calc(9.186% - 17px)
+	padding-right: calc(9.186%)
 	margin: 0 0 30px 0 
 	position: relative
 	justify-content: space-between
+
+	.gallery-header__wrap
+		display: flex
+		align-items: flex-end
 
 	.gallery-header_right, 
 	.gallery-header_left
@@ -134,14 +138,17 @@
 	.gallery-header__image.gallery-img_small
 		width: 50px
 		height: 50px
+		display: block
 
 	.gallery-header__title
-		padding-left: 5px
 		font-weight: 700
 		font-size: 26px
 		line-height: 33px
 		color: #19202C
 		margin: 0
+
+	.gallery-header__title_padded
+		padding-left: 5px
 
 	.gallery-header__text
 		margin: 0 0 0 20px 
