--- a/src/sass/modules/_sidebar.sass
+++ b/src/sass/modules/_sidebar.sass
@@ -10,6 +10,8 @@
 .sidebar-settings
 	display: flex
 	cursor: pointer
+	margin-left: 2px
+	margin-top: 80px
 
 	.sidebar-settings__image
 		margin-right: 12px
