Resolved minor styling issues

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -32,7 +32,7 @@ body
 	padding-bottom: 41px
 
 .main-channel
-	padding-bottom: 33px	
+	padding-bottom: 37px	
 
 .content
 	margin: 0 70px 0 65px
@@ -66,6 +66,8 @@ body
 
 		.info-userpic
 			margin-right: 14px
+			.info-userpic__image
+				display: block
 
 		.info-description
 			padding: 15px 0
