--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -62,9 +62,9 @@
 .top-navigation
 	display: flex
 	justify-content: space-between
-	align-items: flex-end
-	width: 185px
-	margin-right: 45px
+	align-items: flex-start
+	width: 175px
+	margin-riht: 45px
 	margin-left: 505px
 
 	.top-navigation__item
