--- a/src/sass/modules/_sidebar.sass
+++ b/src/sass/modules/_sidebar.sass
@@ -11,7 +11,7 @@
 	display: flex
 	cursor: pointer
 	margin-left: 2px
-	margin-top: 80px
+	margin-top: 79px
 
 	.sidebar-settings__image
 		margin-right: 12px
@@ -22,6 +22,7 @@
 
 .subscriptions
 	width: 160px
+	margin-left: -2px
 
 	.subscriptions-header
 		font-size: 18px		
