--- a/src/sass/modules/_toggle.sass
+++ b/src/sass/modules/_toggle.sass
@@ -1,8 +1,9 @@
 .toggle
 	display: flex
-	align-items: center
+	align-items: flex-end
 	.switch-text
 		font-size: 16px
+		font-weight: 800
 		line-height: 20px
 		letter-spacing: 1px
 		text-transform: uppercase
