Applied styling for reusable profile images

--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -17,15 +17,16 @@ $red-color: #FF0000
 	.content-player
 		margin: 55px 205px 53px 0
 		max-width: 1120px
+
 		.content-player__image
-			width: 540px
+			width: calc(1120px / 2 - 20px)
 			overflow: hidden
 			.player-image__pic
 				width: 100%
 				height: auto
 				object-fit: cover
 		.content-player__description
-			width: calc(100% - 540px)
+			width: calc(1120px / 2  + 20px)
 
 	.top-navigation
 		margin-left: calc(100% - 1298px)
