--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -66,8 +66,6 @@ body
 
 		.info-userpic
 			margin-right: 14px
-			.info-userpic__image
-				display: block
 
 		.info-description
 			padding: 15px 0
@@ -166,3 +164,14 @@ body
 
 	.nav-item.nav-item_more
 		display: none
+
+.profile-image
+	display: block
+
+.profile-image_small
+	width: 50px
+	width: 50px
+
+.profile-image_medium
+	width: 80px
+	height: 80px	
