Implemented relative sizing for content-player

--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -16,7 +16,7 @@ $red-color: #FF0000
 
 	.content-player
 		margin: 55px 205px 53px 0
-		max-width: 1120px
+		max-width: calc(100% - 105px) 
 
 		.content-player__image
 			width: calc(1120px / 2 - 20px)
